--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,16 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "baseUrl": "./",
+    "paths": {
+      // "@app/*":           ["src/app/*"],
+      // "@elements/*":      ["src/app/elements/*"],
+      // "@dialogs/*":       ["src/app/elements/dialogs/*"],
+      // "@pages/*":         ["src/app/pages/*"],
+      // "@services/*":      ["src/app/services/*"],
+      "@assets/*":        ["src/app/assets/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
