--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "outDir": "./dist/out-tsc",
+    "outDir": "./dist",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
@@ -24,12 +24,7 @@
     ],
     "baseUrl": "./",
     "paths": {
-      // "@app/*":           ["src/app/*"],
-      // "@elements/*":      ["src/app/elements/*"],
-      // "@dialogs/*":       ["src/app/elements/dialogs/*"],
-      // "@pages/*":         ["src/app/pages/*"],
-      // "@services/*":      ["src/app/services/*"],
-      "@assets/*":        ["src/app/assets/*"]
+      "@assets/*": ["src/app/assets/*"]
     }
   },
   "angularCompilerOptions": {
