Add code to fix browser output dir

--- a/angular.json
+++ b/angular.json
@@ -45,6 +45,7 @@
           },
           "configurations": {
             "production": {
+              "deleteOutputPath": true,
               "budgets": [
                 {
                   "type": "initial",
