--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build && npm run postbuild",
+    "postbuild": "node post-build.js",
     "publish": "ngh --repo=https://GH_TOKEN@github.com/vandents/harrys-appraisals.git --name=\"vandents\" --email=vandents@mail.gvsu.edu --no-silent",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
